Bug 1830040 - Move net/if.h include before linux/if.h r=bwc

To fix redefinition error when building against musl libc

Differential Revision: https://phabricator.services.mozilla.com/D176561